--- a/client/src/components/RegisterVolunteer/index.module.css
+++ b/client/src/components/RegisterVolunteer/index.module.css
@@ -55,11 +55,13 @@ form button {
   margin: 10px 0;
   width: 30%;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .verify {
   background-color: transparent;
   color: #3ac76e;
+  cursor: pointer;
 }
 
 .wrapper {
